--- a/src/Acme/TestBundle/Resources/config/routing.yml
+++ b/src/Acme/TestBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-acme_test_homepage:
+test:
     pattern:  /hello/{name}
-    defaults: { _controller: AcmeTestBundle:Default:index }
+    defaults: { _controller: AcmeTestBundle:Test:index }
